z-index fix

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -173,3 +173,7 @@ input::-ms-clear {
     margin-top: 66px;
   }
 }
+
+.pretty {
+  z-index: 99 !important;
+}
